@@ -52,6 +52,8 @@ https://github.com/elastic/beats/compare/v6.4.0...6.4[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Allow for cloud-id to specify a custom port. This makes cloud-id work in ECE contexts. {pull}7887[7887]
+
 *Auditbeat*
 
 *Filebeat*
